added almond wood set, and added lang for en_us